# cleanframe

./: README.md  pyproject.toml  test_run.py
cleanframe/: __init__.py  cleaner.py  pipeline.py
cleanframe_data/: __init__.py  analyzer.py  pipeline.py
