[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanframe-data"
version = "0.0.6"
description = "Automated Data Cleaning for Faster Analytics"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.20.0"
]

[project.urls]
"Homepage" = "https://github.com/TejasAnalyst/cleanframe"